--- a/app/src/main/res/layout/dialog_game_options.xml
+++ b/app/src/main/res/layout/dialog_game_options.xml
@@ -7,10 +7,10 @@
 
     <EditText
         android:id="@+id/anteAmtOption"
-        android:hint="Ante Amount"
         android:layout_width="136dp"
-        android:layout_height="40dp"
+        android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
+        android:hint="Ante Amount"
         android:inputType="numberDecimal"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
@@ -19,21 +19,21 @@
 
     <EditText
         android:id="@+id/loseAmtOption"
-        android:hint="Lose Amount"
         android:layout_width="136dp"
-        android:layout_height="40dp"
+        android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
+        android:hint="Lose Amount"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/anteAmtOption" />
 
     <EditText
         android:id="@+id/winAmtOption"
-        android:hint="Win Amount"
         android:layout_width="136dp"
-        android:layout_height="40dp"
+        android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         android:layout_marginBottom="16dp"
+        android:hint="Win Amount"
         android:inputType="numberDecimal"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
